# lorcana-sim

./: .gitignore  CARD_MODEL_PLAN.md  PLAN.md  README.md  TODO.md  ability_building_blocks.py  ability_implementation_guide.json  ability_parser.py  character_targeting_analyzer.py  demo_enumeration.py  final_ability_analyzer.py  game_output.txt  pyproject.toml  refined_ability_analyzer.py  setup.py  test_ability_registration_debug.py  test_banishment_direct.py  test_banishment_scenario.py  test_card_drawn_debug.py  test_card_drawn_proper.py  test_choice_system.py  test_choices_demo.py  test_draw_debug.py  test_event_emission_debug.py  test_fly_my_pet.py  test_fly_my_pet_simple.py  test_grasping_trunk.py  test_growing_powers.py  test_heavily_armed_fix.py  test_message_interface.py  test_migration_validation.py  test_mysterious_advantage.py  test_mysterious_in_game.py  test_one_effect_rule.py  test_output.txt  test_phase5.py  test_plucky_play.py  test_quick_reflexes.py  test_recurring_gust.py  test_simple_debug.py  (+6 more)
examples/: build_random_deck.py  demo_deck_analysis.py  demo_deck_builder.py  demo_enumeration.py  demo_interactive_builder.py  demo_phase1.py  full_game_example.py  simple_deck_builder.py
plan/: PROJECT_OVERVIEW.md
tests/: __init__.py  helpers.py  test_abilities_game_integration.py  test_ability_execution.py  test_ability_integration.py  test_all_keyword_abilities.py  test_all_keyword_abilities_old.py  test_base_card.py  test_bodyguard_enforcement.py  test_card_factory.py  test_challenge_mechanics.py  test_character_card.py  test_composable_integration_simple.py  test_composable_keyword_integration.py  test_damage_calculator.py  test_deck.py  test_deck_builder.py  test_draw_events_fix.py  test_draw_phase.py  test_enhanced_event_system.py  test_event_system.py  test_freshly_played_restrictions.py  test_game_state.py  test_ink_drying_across_turns.py  test_ink_drying_system.py  test_integration.py  test_named_abilities.py  (+9 more)
(+194 files in other folders)
